Добавил compose + kafka, докинул common

--- a/lesson_2/PopugAuthorizationServer/PopugAuthorizationServer.csproj
+++ b/lesson_2/PopugAuthorizationServer/PopugAuthorizationServer.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>42ff359e-3e19-4edd-afc1-af44e0138796</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
