--- a/lesson_2/docker-compose.yml
+++ b/lesson_2/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     build:
       context: .
       dockerfile: PopugAuthorizationServer/Dockerfile
+    ports:
+      - 52999:80
   zookeeper:
     image: wurstmeister/zookeeper:latest
     environment:
