--- a/lesson_2/PopugAuthorizationServer/Properties/launchSettings.json
+++ b/lesson_2/PopugAuthorizationServer/Properties/launchSettings.json
@@ -21,6 +21,9 @@
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "publishAllPorts": true,
+      "environmentVariables": {
+        "ASPNETCORE_URLS": "https://+:443;http://+:80"
+      },
       "useSSL": true
     }
   },
@@ -28,8 +31,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:23177",
-      "sslPort": 44370
+      "applicationUrl": "http://localhost:23177"
     }
   }
 }
