Добавил tasktracker сервис

--- a/lesson_2/docker-compose.yml
+++ b/lesson_2/docker-compose.yml
@@ -8,6 +8,13 @@ services:
       dockerfile: PopugAuthorizationServer/Dockerfile
     ports:
       - 52999:80
+  popugtasktrackerservice:
+    image: ${DOCKER_REGISTRY-}popugtasktrackerservice
+    build:
+      context: .
+      dockerfile: PopugTaskTracker/Dockerfile
+    ports:
+      - 52999:80
   zookeeper:
     image: wurstmeister/zookeeper:latest
     environment:
