Подключил sqllite, докинул миграции

--- a/lesson_2/PopugAuthorizationServer/appsettings.Development.json
+++ b/lesson_2/PopugAuthorizationServer/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqliteDb": "Data source=AuthDemoDb"
+    "SqliteDb": "Data source=PopugAuthDb"
   },
   "Logging": {
     "LogLevel": {
