--- a/lesson_2/PopugTaskTracker/appsettings.Development.json
+++ b/lesson_2/PopugTaskTracker/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqliteDb": "Data source=TaskTrackerDb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
