Добавил валидацию схем, кастомизировал бизнес события, добавил batch reassigned

--- a/lesson_2/PopugCommon/PopugCommon.csproj
+++ b/lesson_2/PopugCommon/PopugCommon.csproj
@@ -5,10 +5,29 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Scheme\users.stream.created_v1.json" />
+    <None Remove="Scheme\users.stream.deleted_v1.json" />
+    <None Remove="Scheme\users.stream.updated_v1.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Scheme\users.stream.deleted_v1.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Scheme\users.stream.updated_v1.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Scheme\users.stream.created_v1.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Confluent.Kafka" Version="2.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.15" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
