--- a/lesson_2/PopugAnalitics/PopugAnalitics.csproj
+++ b/lesson_2/PopugAnalitics/PopugAnalitics.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\PopugCommon\PopugCommon.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
