Поправил логику, поправил схемы

--- a/lesson_2/PopugCommon/SchemaRegistry/tasks.reassigned_v1.json
+++ b/lesson_2/PopugCommon/SchemaRegistry/tasks.reassigned_v1.json
@@ -10,7 +10,7 @@
     },
     "Event": {
       "type": "string",
-      "enum": [ "task.reassigned" ]
+      "enum": [ "tasks.reassigned" ]
     },
     "Version": {
       "type": "string",
