--- a/lesson_2/PopugCommon/PopugCommon.csproj
+++ b/lesson_2/PopugCommon/PopugCommon.csproj
@@ -5,39 +5,31 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="SchemaRegistry\tasks.assigned_v1.json" />
-    <None Remove="SchemaRegistry\tasks.completed_v1.json" />
+    <None Remove="SchemaRegistry\balance.transaction.stream_v1.json" />
+    <None Remove="SchemaRegistry\task.assigned_v1.json" />
+    <None Remove="SchemaRegistry\task.completed_v1.json" />
+    <None Remove="SchemaRegistry\task.stream_v1.json" />
     <None Remove="SchemaRegistry\tasks.reassigned_v1.json" />
-    <None Remove="SchemaRegistry\tasks.stream.created_v1.json" />
-    <None Remove="SchemaRegistry\tasks.stream.updated_v1.json" />
-    <None Remove="SchemaRegistry\users.stream.created_v1.json" />
-    <None Remove="SchemaRegistry\users.stream.deleted_v1.json" />
-    <None Remove="SchemaRegistry\users.stream.updated_v1.json" />
+    <None Remove="SchemaRegistry\users.stream_v1.json" />
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="SchemaRegistry\tasks.completed_v1.json">
+    <Resource Include="SchemaRegistry\balance.transaction.stream_v1.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="SchemaRegistry\tasks.assigned_v1.json">
+    <Resource Include="SchemaRegistry\task.completed_v1.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="SchemaRegistry\task.assigned_v1.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="SchemaRegistry\tasks.reassigned_v1.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="SchemaRegistry\tasks.stream.created_v1.json">
+    <Resource Include="SchemaRegistry\task.stream_v1.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="SchemaRegistry\tasks.stream.updated_v1.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="SchemaRegistry\users.stream.deleted_v1.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="SchemaRegistry\users.stream.updated_v1.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="SchemaRegistry\users.stream.created_v1.json">
+    <Resource Include="SchemaRegistry\users.stream_v1.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
