--- a/lesson_2/PopugCommon/PopugCommon.csproj
+++ b/lesson_2/PopugCommon/PopugCommon.csproj
@@ -8,12 +8,16 @@
     <None Remove="SchemaRegistry\balance.transaction.stream_v1.json" />
     <None Remove="SchemaRegistry\task.assigned_v1.json" />
     <None Remove="SchemaRegistry\task.completed_v1.json" />
+    <None Remove="SchemaRegistry\task.payment.processed_v1.json" />
     <None Remove="SchemaRegistry\task.stream_v1.json" />
     <None Remove="SchemaRegistry\tasks.reassigned_v1.json" />
     <None Remove="SchemaRegistry\users.stream_v1.json" />
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="SchemaRegistry\task.payment.processed_v1.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="SchemaRegistry\balance.transaction.stream_v1.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
