--- a/lesson_2/PopugCommon/PopugCommon.csproj
+++ b/lesson_2/PopugCommon/PopugCommon.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <None Remove="SchemaRegistry\balance.transaction.stream_v1.json" />
-    <None Remove="SchemaRegistry\task.assigned_v1.json" />
+    <None Remove="SchemaRegistry\task.added_v1.json" />
     <None Remove="SchemaRegistry\task.completed_v1.json" />
     <None Remove="SchemaRegistry\task.payment.processed_v1.json" />
     <None Remove="SchemaRegistry\task.stream_v1.json" />
@@ -28,7 +28,7 @@
     <Resource Include="SchemaRegistry\task.completed_v1.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="SchemaRegistry\task.assigned_v1.json">
+    <Resource Include="SchemaRegistry\task.added_v1.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="SchemaRegistry\tasks.reassigned_v1.json">
