--- a/lesson_2/PopugCommon/PopugCommon.csproj
+++ b/lesson_2/PopugCommon/PopugCommon.csproj
@@ -11,11 +11,15 @@
     <None Remove="SchemaRegistry\task.payment.processed_v1.json" />
     <None Remove="SchemaRegistry\task.stream_v1.json" />
     <None Remove="SchemaRegistry\task.stream_v2.json" />
+    <None Remove="SchemaRegistry\taskcosts.stream_v1.json" />
     <None Remove="SchemaRegistry\tasks.reassigned_v1.json" />
     <None Remove="SchemaRegistry\users.stream_v1.json" />
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="SchemaRegistry\taskcosts.stream_v1.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="SchemaRegistry\task.stream_v2.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
